--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Sofia Rosborg individuell examination</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav class="navbar">
-      <ul class="navbar__logo">
-        <li>
-          <img src="https://azomo.io/assets/zocom-logo-dark-86598755.svg" />
-        </li>
-      </ul>
+        <img src="https://azomo.io/assets/zocom-logo-dark-86598755.svg" class="navbar__logo" alt="ZoCom logo"/>
       <ul class="navbar__menu">
         <li class="navbar__listitem navbar__listitem--selected">Home</li>
         <li class="navbar__listitem">How It Works</li>
@@ -53,34 +49,34 @@
       </p>
       <section class="header__button-container">
         <button class="header__button">
-          <img src="path4.png" class="header__button-logo"/>App Store
+          <img src="assets/path4.png" class="header__button-logo"/>App Store
         </button>
         <button class="header__button">
-          <img src="Group.png" class="header__button-logo"/>Google Play
+          <img src="assets/Group.png" class="header__button-logo"/>Google Play
         </button>
       </section>
-      <img src="phone.png" class="header__img" />
+      <img src="assets/phone.png" class="header__img" />
     </header>
 
     <main class="main">
       <h2 class="main__header">Our products</h2>
       <article class="main__small-card">
-        <img src="image-outline.png" class="main__card-img" />
+        <img src="assets/image-outline.png" class="main__card-img" />
         <h3 class="main__card-header">Green Cap</h3>
         <p class="main__card-price">US$29</p>
       </article>
       <article class="main__small-card">
-        <img src="image-outline.png" class="main__card-img" />
+        <img src="assets/image-outline.png" class="main__card-img" />
         <h3 class="main__card-header">Zara skirt</h3>
         <p class="main__card-price">US$19.90</p>
       </article>
       <article class="main__small-card">
-        <img src="image-outline.png" class="main__card-img" />
+        <img src="assets/image-outline.png" class="main__card-img" />
         <h3 class="main__card-header">Nike Air</h3>
         <p class="main__card-price">US$34</p>
       </article>
       <article class="main__small-card">
-        <img src="image-outline.png" class="main__card-img" />
+        <img src="assets/image-outline.png" class="main__card-img" />
         <h3 class="main__card-header">Nerd tshirt</h3>
         <p class="main__card-price">US$9.99</p>
       </article>
