edited class names

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <nav class="navbar">
         <img src="https://azomo.io/assets/zocom-logo-dark-86598755.svg" class="navbar__logo" alt="ZoCom logo"/>
       <ul class="navbar__menu">
-        <li class="navbar__listitem navbar__listitem--selected">Home</li>
-        <li class="navbar__listitem">How It Works</li>
-        <li class="navbar__listitem">Features</li>
-        <li class="navbar__listitem">Press</li>
-        <li class="navbar__listitem">Pricing</li>
-        <li class="navbar__listitem">Contact</li>
+        <li class="navbar__list-item navbar__list-item--selected">Home</li>
+        <li class="navbar__list-item">How It Works</li>
+        <li class="navbar__list-item">Features</li>
+        <li class="navbar__list-item">Press</li>
+        <li class="navbar__list-item">Pricing</li>
+        <li class="navbar__list-item">Contact</li>
       </ul>
       <button class="navbar__button">Get a quote</button>       
 
-      <div class="navbar__hamburgermenu">
-        <input type="checkbox" class="navbar__hamburgermenu-checkbox"/>
-        <span class="navbar__hamburgermenu-line navbar__hamburgermenu-line--first"></span>
-        <span class="navbar__hamburgermenu-line navbar__hamburgermenu-line--second"></span>
-        <span class="navbar__hamburgermenu-line navbar__hamburger-line--third"></span>        
-        <ul class="navbar__hamburgermenu-list">
-          <li class="navbar__hamburgermenu-listitem"><a href="#">Home</a></li>
-          <li class="navbar__hamburgermenu-listitem"><a href="#">How It Works</a></li>
-          <li class="navbar__hamburgermenu-listitem"><a href="#">Features</a></li>
-          <li class="navbar__hamburgermenu-listitem"><a href="#">Press</a></li>
-          <li class="navbar__hamburgermenu-listitem"><a href="#">Pricing</a></li>
-          <li class="navbar__hamburgermenu-listitem"><a href="#">Contact</a></li>
+      <div class="navbar__hamburger-menu">
+        <input type="checkbox" class="navbar__hamburger-menu-checkbox"/>
+        <span class="navbar__hamburger-menu-line navbar__hamburger-menu-line--first"></span>
+        <span class="navbar__hamburger-menu-line navbar__hamburger-menu-line--second"></span>
+        <span class="navbar__hamburger-menu-line navbar__hamburger-menu-line--third"></span>        
+        <ul class="navbar__hamburger-menu-list">
+          <li class="navbar__hamburger-menu-list-item"><a href="#">Home</a></li>
+          <li class="navbar__hamburger-menu-list-item"><a href="#">How It Works</a></li>
+          <li class="navbar__hamburger-menu-list-item"><a href="#">Features</a></li>
+          <li class="navbar__hamburger-menu-list-item"><a href="#">Press</a></li>
+          <li class="navbar__hamburger-menu-list-item"><a href="#">Pricing</a></li>
+          <li class="navbar__hamburger-menu-list-item"><a href="#">Contact</a></li>
         </ul>
       </div>
   </nav>
@@ -97,6 +97,7 @@
       <section class="footer__container">
         <h2 class="footer__header">Contact us</h2>
         <h3 class="footer__subheader">We'd love to hear from you</h3>
+        <p class="footer__text">Please send us an email with your thoughts!</p>
         <form class="footer__form">
         <input type="text" id="name" name="name" class="footer__input" placeholder="Name">
         <input type="email" id="email" name="email" class="footer__input" placeholder="Email">
