--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <input type="text" id="name" name="name" class="footer__input" placeholder="Name">
         <input type="email" id="email" name="email" class="footer__input" placeholder="Email">
         <input type="text" id="address" name="address" class="footer__input" placeholder="Address">
-        <input type="number" id="phonenumber" name="phonenumber" class="footer__input" placeholder="Phone number">
+        <input type="number" id="phone-number" name="phone-number" class="footer__input" placeholder="Phone number">
         <textarea name="message" rows="5" cols="30" class="footer__textarea" placeholder="What would you like to tell us?"></textarea>
         <input type="submit" value="Let us know!" class="footer__submit">
       </form>
